# cameraplus

./: .gitmodules  CMakeLists.txt  README.md  TODO  TODO.sailfish  cameraplus-pl.ts  cameraplus.pri  cameraplus.pro  cameraplus.ts  translate.sh
data/: features.py  features.txt
data/harmattan/: cameraplus.ini  features.ini  qtcamera.ini
data/n9/: cameraplus.ini  features.ini  n950_resolutions.ini  properties.ini  qtcamera.ini  resolutions.ini
data/sailfish/: cameraplus.ini  device.ini  features.ini  properties.ini  (+3 more)
debian/: cameraplus.aegis  cameraplus.desktop  cameraplus.postinst  changelog  control  copyright  install  restart-mthemedaemon.sh  rules
declarative/: CMakeLists.txt  aperture.cpp  aperture.h  autofocus.cpp  autofocus.h  camera.cpp  camera.h  cameraconfig.cpp  cameraconfig.h  capability.cpp  capability.h  colortone.cpp  colortone.h  declarative.pro  declarativeqtcameranotifications.h  evcomp.cpp  evcomp.h  exposure.cpp  exposure.h  flash.cpp  flash.h  flickerreduction.cpp  flickerreduction.h  focus.cpp  focus.h  imagemode.cpp  imagemode.h  imageresolution.cpp  imageresolution.h  imageresolutionmodel.cpp  imageresolutionmodel.h  imagesettings.cpp  imagesettings.h  iso.cpp  iso.h  metadata.cpp  metadata.h  mode.cpp  mode.h  modesettings.cpp  (+49 more)
icons/: README.txt  cameraplus.ai  gen.sh  icons.qrc  icons.txt
imports/: aperture.cpp  aperture.h  autofocus.cpp  autofocus.h  camera.cpp  camera.h  capability.cpp  capability.h  colortone.cpp  colortone.h  evcomp.cpp  evcomp.h  exposure.cpp  exposure.h  flash.cpp  flash.h  flickerreduction.cpp  flickerreduction.h  focus.cpp  focus.h  imagemode.cpp  imagemode.h  imageresolutionmodel.cpp  imagesettings.cpp  imagesettings.h  imports.pro  iso.cpp  iso.h  metadata.cpp  metadata.h  mode.cpp  mode.h  mute.cpp  mute.h  noisereduction.cpp  noisereduction.h  notifications.cpp  notifications.h  notificationscontainer.cpp  notificationscontainer.h  (+19 more)
lib/: CMakeLists.txt  lib.pro  main.cpp  main.h  qtcamanalysisbin.cpp  qtcamanalysisbin.h  qtcamaperture.cpp  qtcamaperture.h  qtcamautofocus.cpp  qtcamautofocus.h  qtcamautofocus_p.h  qtcamcaf.cpp  qtcamcaf.h  qtcamcaf_p.h  qtcamcapability.cpp  qtcamcapability.h  qtcamcapability_p.h  qtcamcolortone.cpp  qtcamcolortone.h  qtcamconfig.cpp  qtcamconfig.h  qtcamconfig_p.h  qtcamdevice.cpp  qtcamdevice.h  qtcamdevice_p.h  qtcamera.cpp  qtcamera.h  qtcamevcomp.cpp  qtcamevcomp.h  qtcamexposure.cpp  qtcamexposure.h  qtcamflash.cpp  qtcamflash.h  qtcamflash_p.h  qtcamflickerreduction.cpp  qtcamflickerreduction.h  qtcamfocus.cpp  qtcamfocus.h  qtcamgraphicsviewfinder.cpp  qtcamgraphicsviewfinder.h  (+86 more)
lib/gst/: gstcopy.cpp  gstcopy.h
modes/: fast-capture.ini  image-panorama.ini  image-sequential.ini  image-timer.ini  image.ini  video.ini
panorama/: CMakeLists.txt  README  feature_mos.cpp  mosaic_renderer.cpp  mosaic_renderer.h  panorama.cpp  panorama.h  panoramainput.cpp  panoramainput.h  panoramaplugin.cpp  panoramaplugin.h  panoramastitcher.cpp  panoramastitcher.h  panoramatracker.cpp  panoramatracker.h  panoramaworker.h  qmldir
panorama/mosaic/: Log.h
panorama/mosaic_renderer/: FrameBuffer.cpp  SurfaceTextureRenderer.cpp
qml/: BaseOverlay.qml  CameraInfoBanner.qml  CameraOverlay.qml  CameraPage.qml  CameraQueryDialog.qml  CameraSettings.qml  CameraSlider.qml  CameraTheme.qml  CameraToolBar.js  CameraToolBar.qml  CameraToolBarLabel.qml  CameraToolBarTools.qml  CameraToolBarToolsContainer.qml  CameraToolIcon.qml  CameraView.qml  CaptureButton.qml  CaptureCancel.qml  CaptureControl.qml  CheckButton.qml  CheckButtonData.qml  ColorToneButton.qml  ControlsActivationData.qml  DeviceSelector.qml  DeviceSettingsSetter.qml  EvCompButton.qml  FastCaptureOverlay.qml  FlashButton.qml  FocusReticle.qml  IconButton.qml  ImageColorFilterButton.qml  ImageColorFilterPage.qml  ImageEvCompButton.qml  ImageIsoButton.qml  ImageModeIndicators.qml  ImageModeSettings.qml  ImageModeToolBar.qml  ImageOverlay.qml  ImagePage.qml  ImageResolutionSettings.qml  ImageSceneButton.qml  (+61 more)
rpm/: cameraplus.desktop  cameraplus.spec  harbour-cameraplus.changes  harbour-cameraplus.desktop  harbour-cameraplus.rpmlintrc  harbour-cameraplus.spec  qmake.conf
sounds/: README.txt
src/: CMakeLists.txt  batteryinfo.cpp  batteryinfo.h  cameraresources.cpp  cameraresources.h  compass.cpp  compass.h  dbusservice.cpp  dbusservice.h  deletehelper.cpp  deletehelper.h  devicefeatures.cpp  devicefeatures.h  deviceinfo.cpp  deviceinfo.h  devicekeys.cpp  devicekeys.h  devicesettings.cpp  devicesettings.h  displaystate.cpp  displaystate.h  exiforientation.cpp  exiforientation.h  fileindex.cpp  fileindex.h  fileinfomodel.cpp  fileinfomodel.h  filenaming.cpp  filenaming.h  focusrectangle.cpp  focusrectangle.h  fsmonitor.cpp  fsmonitor.h  galleryhelper.cpp  galleryhelper.h  geocode.cpp  geocode.h  gridlines.cpp  gridlines.h  main.cpp  (+31 more)
src/harmattan/: CMakeLists.txt  batteryinfo.cpp  batteryinfo.h  compass.h  deviceinfo.cpp  deviceinfo.h  devicekeys.cpp  devicekeys.h  displaystate.cpp  displaystate.h  fsmonitor.cpp  fsmonitor.h  geocode.cpp  geocode.h  harmattan.pri  mountprotector.cpp  orientation.cpp  orientation.h  phoneprofile.cpp  phoneprofile.h  platformquirks.cpp  platformquirks.h  proximity.cpp  proximity.h  quillitem.cpp  quillitem.h  soundvolumecontrol.cpp  soundvolumecontrol.h
src/nemo/: deviceinfo.cpp  geocode.cpp  nemo.pri  soundvolumecontrol.cpp
src/sailfish/: CMakeLists.txt  batteryinfo.cpp  batteryinfo.h  compass.cpp  compass.h  deviceinfo.cpp  deviceinfo.h  devicekeys.cpp  devicekeys.h  displaystate.cpp  displaystate.h  fsmonitor.cpp  fsmonitor.h  geocode.cpp  geocode.h  orientation.cpp  orientation.h  phoneprofile.cpp  phoneprofile.h  sailfish.pri  soundvolumecontrol.cpp  soundvolumecontrol.h
tests/: CMakeLists.txt  tests.pro  tst_camera.cpp  tst_camera.h  tst_camera.pro  tst_position.cpp  tst_position.h  tst_position.pro
tools/: CMakeLists.txt  dump_resolutions.cpp  dump_resolutions.pro  tools.pro
translations/: CMakeLists.txt  cameraplus-es.ts  cameraplus-pl.ts  cameraplus-sv.ts  cameraplus.ts  plurals.ts
(+57 files in other folders)
